# cosmic-monitor-control-applet

./: .gitignore  CLAUDE.md  Cargo.toml  PKGBUILD  README.md  TODO-SERIAL-BASED-IDS.md  check-version.sh  install-and-restart-panel.sh  justfile
.github/: cosmic-monitor-control-applet.spec
.github/workflows/: ci.yml  release.yml  rust.yml
data/udev/: 45-i2c-permissions.rules  99-apple-displays.rules
debian/: changelog  control  copyright  rules
i18n/de/: cosmic_monitor_control_applet.ftl
i18n/en/: cosmic_ext_applet_external_monitor_brightness.ftl  cosmic_monitor_control_applet.ftl
i18n/fr/: cosmic_monitor_control_applet.ftl
i18n/hu/: cosmic_monitor_control_applet.ftl
i18n/it/: cosmic_monitor_control_applet.ftl
i18n/nl/: cosmic_monitor_control_applet.ftl
i18n/pl/: cosmic_monitor_control_applet.ftl
i18n/ro/: cosmic_monitor_control_applet.ftl
i18n/sv/: cosmic_monitor_control_applet.ftl
opensuse/: cosmic-monitor-control-applet.spec
res/: desktop_entry.desktop  metainfo.xml
rpm/: build-rpm.sh  cosmic-monitor-control-applet-simple.spec  cosmic-monitor-control-applet.spec
src/: app.rs  brightness.rs  config.rs  daemon.rs  error.rs  main.rs  migrations.rs  monitor.rs  permissions.rs  randr.rs  ui_sync.rs
src/app/: messages.rs  mod.rs  popup.rs  state.rs  update.rs
src/devices/: mod.rs
src/devices/apple/: mod.rs  pro_display_xdr.rs  studio_display.rs
src/devices/lg/: mod.rs  ultrafine_4k.rs  ultrafine_5k.rs
src/hotplug/: mod.rs  subscription.rs  udev_monitor.rs
src/monitor/: backend.rs  enumeration.rs  manager.rs  mod.rs  subscription.rs
src/protocols/: ddc_ci.rs  mod.rs
src/protocols/apple_hid/: device.rs  mod.rs
src/view/: about.rs  applet_button.rs  common.rs  dark_mode.rs  empty_state.rs  mod.rs  monitor_item.rs  permissions_warning.rs  popup.rs  profiles.rs  quick_settings.rs
