[package]
name = "cosmic-ext-applet-external-monitor-brightness"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/cosmic-utils/cosmic-ext-applet-external-monitor-brightness"

[features]
default = ["apple-hid-displays", "brightness-sync-daemon"]
apple-hid-displays = ["dep:hidapi"]
brightness-sync-daemon = ["dep:zbus", "dep:futures"]

[dependencies]
ddc-hi = "0.4"
hidapi = { version = "2.6", optional = true }
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
rust-embed = { version = "8", features = ["debug-embed"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-journald = "0.3"
tracing-log = "0.2"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "net"] }
serde = "1"
dirs = "6"
anyhow = "1"
udev = "0.8"
libc = "0.2"
zbus = { version = "5", optional = true }
futures = { version = "0.3", optional = true }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
# rev = "a85b3693994ef2b8275eca6a9eccc86a2d7e9f86"
default-features = false
features = ["applet", "tokio", "wayland"]

[patch."https://github.com/smithay/client-toolkit.git"]
sctk = { package = "smithay-client-toolkit", version = "=0.19.2" }

# [patch."https://github.com/pop-os/libcosmic"]
# libcosmic = { path = "../libcosmic"}
